--- a/shapes/faq.html
+++ b/shapes/faq.html
@@ -9,22 +9,37 @@
 
   </header>
 
-  <h1 class='text-center'>Frequently Asked Questions</h1>
+  <h1 class='text-center'>
+    <span id='header-frequently'>Frequently</span>
+    <span id='header-asked'>Asked</span>
+    <span id='header-questions'>Questions</span>
+  </h1>
 
   <div class='questions-block'>
-    <h3>Question 1: What is this game?</h3>
-    <p>Answer: This is an arcade-style game.</p>
+    <h3 class='question'>Question 1: What is this game?</h3>
+    <p>
+      Answer: This is an arcade-style game. Different shapes will randomly appear on the board. Your task is to quickly identify
+      the shape. At first, you are given quite a bit of time to make a decision. As this is an arcade game, it gets progressively
+      harder and harder. The time you have to think will decrease. You will have to think on your feet.
+    </p>
 
-    <h3>Question 2: How do you score points?</h3>
-    <p>Answer: You score points by correctly stating which shape appears on the game board. Your choices are either circle or square</p>
+    <h3 class='question'>Question 2: How do you earn coins?</h3>
+    <p>
+      Answer: Coins are earned as a result of your hard work. They can be used to unlock new features. For every five points you earn,
+      you are awarded 1 coin. Coins can also be purchased.
+    </p>
 
-    <h3>Question 3: Do you have to create an account?</h3>
+    <h3 class='question'>Question 3: Do you have to create an account?</h3>
     <p>Answer: No. Best of all, this game can be played without signing up.</p>
 
-    <h3>Question 4: Do you have to pay to play this game?</h3>
-    <p>Answer: Unlike most games, this one is completely free.</p>
+    <h3 class='question'>Question 4: Do you have to pay to play this game?</h3>
+    <p>Answer: Shapes Game is free to play. However, you can choose to purchase coins to help you unlock features faster</p>
   </div>
 
+  <footer id='my-footer'>
+
+  </footer>
+  
   <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js'></script>
   <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
