--- a/shapes/scores.html
+++ b/shapes/scores.html
@@ -10,7 +10,7 @@
 
   </header>
   
-  <h1 class='text-center'>High Scores</h1>
+  <h1 class='text-center' id='high-scores'>High Scores</h1>
   
   <table id='scores-table'>
   
@@ -51,6 +51,10 @@
     </tr>
     
   </table>
+  
+  <footer id='my-footer'>
+
+  </footer>
   
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js'></script>
   <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
