--- a/shapes/achievements.html
+++ b/shapes/achievements.html
@@ -131,6 +131,10 @@
     </table>
   </div>
   
+  <footer id='my-footer'>
+
+  </footer>
+  
   <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js'></script>
   <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
