--- a/shapes/header.html
+++ b/shapes/header.html
@@ -8,7 +8,9 @@
         <span class='icon-bar'></span>
       </button>
       <a href='index.html' class='navbar-brand'>
-        Canvas Shapes Game
+        <span class='header-canvas'>Canvas</span>
+        <span class='header-shapes'>Shapes</span>
+        <span class='header-game'>Game</span>
       </a>
 
     </div>
@@ -17,7 +19,9 @@
         <li><a href='help.html'>Help</a></li>
         <li><a href='achievements.html'>Achievements</a></li>
         <li><a href='scores.html'>Scores</a></li>
+				<li><a href='shop.html'>Shop</a></li>
         <li><a href='faq.html'>FAQs</a></li>
+				<li><a href='related.html'>More Games</a></li>
       </ul>
     </nav>
   </div>
