--- a/shapes/help.html
+++ b/shapes/help.html
@@ -38,6 +38,10 @@
     
   </div>
   
+  <footer id='my-footer'>
+
+  </footer>
+  
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js'></script>
   <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
   <script src='scripts/shapes.js'></script>
