--- a/shapes/index.html
+++ b/shapes/index.html
@@ -13,9 +13,9 @@
   <main>
   
     <h1 id='main-header'>
-      <span id='header-canvas'>Canvas</span>
-      <span id='header-shapes'>Shapes</span>
-      <span id='header-game'>Game</span>
+      <span class='header-canvas'>Canvas</span>
+      <span class='header-shapes'>Shapes</span>
+      <span class='header-game'>Game</span>
     </h1>
 
     <div id='notification'></div>
@@ -42,6 +42,10 @@
     </div>
   
   </main>
+  
+  <footer id='my-footer'>
+
+  </footer>
   
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js'></script>
   <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
