Convert to node project

--- a/shapes/header.html
+++ b/shapes/header.html
@@ -19,10 +19,11 @@
         <li><a href='help.html'>Help</a></li>
         <li><a href='achievements.html'>Achievements</a></li>
         <li><a href='scores.html'>Scores</a></li>
-				<li><a href='shop.html'>Shop</a></li>
+        <li><a href='shop.html'>Shop</a></li>
         <li><a href='faq.html'>FAQs</a></li>
-				<li><a href='related.html'>More Games</a></li>
+        <li><a href='related.html'>More Games</a></li>
       </ul>
+      <span id='coins-display'>COINS <span class='coins-badge'></span></span>
     </nav>
   </div>
 </nav>
