--- a/shapes/help.html
+++ b/shapes/help.html
@@ -44,6 +44,6 @@
   
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js'></script>
   <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
-  <script src='scripts/shapes.js'></script>
+  <script src='scripts/main.min.js'></script>
   
 </body>
