--- a/shapes/related.html
+++ b/shapes/related.html
@@ -57,9 +57,6 @@
   
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js'></script>
   <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
-  <script src='scripts/scores.js'></script>
-  <script src='scripts/achievements.js'></script>
-  <script src='scripts/random.js'></script>
-  <script src='scripts/shapes.js'></script>
+  <script src='scripts/main.min.js'></script>
   
 </body>
